# garnish

./: README.md  com.spaciouscoder78.garnish.json  meson.build
data/: com.spaciouscoder78.garnish.desktop.in  com.spaciouscoder78.garnish.gschema.xml  com.spaciouscoder78.garnish.metainfo.xml.in  com.spaciouscoder78.garnish.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: garnish.gresource.xml  garnish.in  main.py  meson.build  window.py  window.ui
